refactor(catalogs): align catalog ownership to consumers